<resources>
    <string name="app_name">Cryboard</string>
    <string name="RightArrow"><![CDATA[>]]></string>
    <string name="LeftArrow"><![CDATA[<]]></string>
    <string name="title_activity_track_settings">TrackSettings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>

    <string name="volume">Volume</string>
    <string name="default_tempo">120</string>
    <string name="default_time_signature">4/4</string>

    <string name="project_name">Project Name</string>
    <string name="save">Save</string>
    <string name="export">Export</string>

    <string name="error_no_midi">MIDI is missing</string>
    <string name="error_no_midi_msg">MIDI file related to this project doesn\'t exists or can\'t be opened. Load metadata only?</string>
    <string name="error_invalid_project_name">Project name must not be empty or contain invalid characters</string>

    <string name="delete_project">Delete</string>
    <string name="delete_project_msg">You are going to delete project metadata and MIDI. After confirmation, it will be impossible to restore any data.</string>
    <string name="delete_project_error">Failed to delete the project</string>
    <string name="export_project">Export Project</string>
    <string name="export_midi">Export MIDI</string>
    <string name="export_audio">Export Audio</string>
    <string name="favourite">Favourite</string>
    <string name="delete">Delete</string>
    <string name="open">Open Project</string>
    <string name="attack">Attack</string>
    <string name="decay">Decay</string>
    <string name="release">Release</string>
    <string name="sustain">Sustain</string>
    <string name="create_custom">Create Custom</string>
    <string name="instrument_name">Instrument name</string>
    <string name="synth_instrument">Synth Instrument</string>
    <string name="from_asset">From Asset</string>
    <string name="no_asset_selected">No asset selected</string>
    <string name="asset_selected">Selected asset: %1$s</string>
    <string name="base_note">Base note:</string>
    <string name="amplitude">Amplitude</string>
    <string name="phase">Phase</string>
    <string name="pitch">Pitch</string>
    <string name="voices">Voices</string>
    <string name="detune">Detune</string>
    <string name="oscillators">Oscillators</string>
    <string name="envelope">Envelope</string>
    <string name="effects">Effects</string>
</resources>