<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RadioGroup
        android:id="@+id/createCustomType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/createSynthCustom"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/synth_instrument" />

        <RadioButton
            android:id="@+id/createAssetCustom"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/from_asset" />

    </RadioGroup>

    <EditText
        android:id="@+id/customInstrumentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textShortMessage"
        android:hint="@string/instrument_name"
        android:importantForAutofill="no" />

    <LinearLayout
        android:id="@+id/assetSelectionArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible">

        <Button
            android:id="@+id/selectAsset"
            style="@style/TextAppearance.AppCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/load_file"
            android:textAlignment="viewStart"
            android:text="@string/no_asset_selected"
            tools:ignore="RtlHardcoded" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/base_note"
            android:layout_gravity="center_vertical" />

        <Spinner
            android:id="@+id/baseNoteSpinner"
            android:tooltipText="@string/base_note"
            tools:listitem="@layout/support_simple_spinner_dropdown_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>
</LinearLayout>