<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingVertical="5dp">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/oscillatorEnabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="10dp" />

    <ImageButton
        android:id="@+id/shapeButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_gravity="center_vertical"
        android:scaleType="fitCenter"
        android:background="@color/translucent"
        app:srcCompat="@drawable/sine"
        tools:ignore="ContentDescription" />

    <com.sdsmdg.harjot.crollerTest.Croller
        android:id="@+id/amplitudeSlider"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:foregroundGravity="clip_horizontal"
        app:label="@string/amplitude"
        app:min="0"
        app:max="100"
        app:is_continuous="true"
        app:progress_primary_stroke_width="10" />

    <com.sdsmdg.harjot.crollerTest.Croller
        android:id="@+id/phaseSlider"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:foregroundGravity="clip_horizontal"
        app:label="@string/phase"
        app:min="0"
        app:max="360"
        app:is_continuous="true"
        app:progress_primary_stroke_width="10" />

    <com.example.midicryboard.trackactivity.NumberPicker
        android:id="@+id/pitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="5dp"
        app:labelText="@string/pitch"
        app:min="-60"
        app:max="60"/>

    <com.example.midicryboard.trackactivity.NumberPicker
        android:id="@+id/detuneVoices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="5dp"
        app:labelText="@string/voices"
        app:min="1"
        app:max="8"
        app:value="1"/>

    <com.sdsmdg.harjot.crollerTest.Croller
        android:id="@+id/detuneSlider"
        app:enabled="false"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="10dp"
        android:foregroundGravity="clip_horizontal"
        app:label="@string/detune"
        app:min="0"
        app:max="100"
        app:is_continuous="true"
        app:progress_primary_stroke_width="10" />
</LinearLayout>