<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".projectactivities.OpenProjectActivity">

    <EditText
        android:id="@+id/projectNameFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/project_name"
        android:importantForAutofill="no"
        android:inputType="textFilter"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/clearFilter"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/clearFilter"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/projectNameFilter"
        app:layout_constraintEnd_toStartOf="@+id/onlyFavourites"
        app:layout_constraintTop_toTopOf="@+id/projectNameFilter"
        android:src="@drawable/clear"
        android:scaleType="fitCenter"
        android:background="@null"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/onlyFavourites"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/projectNameFilter"
        app:layout_constraintEnd_toEndOf="@+id/projects"
        app:layout_constraintTop_toTopOf="@+id/projectNameFilter"
        android:src="@drawable/favourites"
        android:scaleType="fitCenter"
        android:background="@null"
        tools:ignore="ContentDescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/projects"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="15dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/projectButtons"
        app:layout_constraintStart_toStartOf="@+id/projectNameFilter"
        app:layout_constraintTop_toBottomOf="@id/projectNameFilter"
        tools:listitem="@layout/project"/>

    <TableLayout
        android:id="@+id/projectButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout>
                <com.example.midicryboard.projectactivities.button.AudioButton
                    android:id="@+id/shareWav"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:paddingHorizontal="15dp"
                    android:paddingBottom="15dp"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/export_audio"/>
            </FrameLayout>

            <FrameLayout>
                <com.example.midicryboard.projectactivities.button.MidiButton
                    android:id="@+id/shareMidi"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:paddingHorizontal="15dp"
                    android:paddingBottom="15dp"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/export_midi"/>
            </FrameLayout>

            <FrameLayout>
                <com.example.midicryboard.projectactivities.button.ShareButton
                    android:id="@+id/shareProject"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:paddingHorizontal="15dp"
                    android:paddingBottom="15dp"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/export_project"/>
            </FrameLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout>
                <com.example.midicryboard.projectactivities.button.FavouriteButton
                    android:id="@+id/favouriteProject"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:paddingHorizontal="15dp"
                    android:paddingBottom="15dp"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/favourite"/>
            </FrameLayout>

            <FrameLayout>
                <com.example.midicryboard.projectactivities.button.DeleteButton
                    android:id="@+id/deleteProject"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:paddingHorizontal="15dp"
                    android:paddingBottom="15dp"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/delete"/>
            </FrameLayout>

            <FrameLayout>
                <com.example.midicryboard.projectactivities.button.OpenButton
                    android:id="@+id/openProject"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:paddingHorizontal="15dp"
                    android:paddingBottom="15dp"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/open"/>
            </FrameLayout>

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>