<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".trackactivity.TrackPropertiesActivity"
    android:baselineAligned="false" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.33" >

        <Spinner
            android:id="@+id/categories"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.widget.Button
            android:id="@+id/createCustomButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:background="@drawable/selectable_button"
            android:foreground="@drawable/create"
            android:foregroundTintMode="src_atop"
            android:foregroundGravity="left"
            android:text="@string/create_custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categories" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/instrumentsList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createCustomButton"
            tools:listitem="@layout/instrument" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:paddingHorizontal="15dp"
        android:paddingTop="15dp"
        android:layout_weight="0.67" >


        <com.example.midicryboard.trackactivity.EnvelopeCanvas
            android:id="@+id/envelopeCanvas"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tableLayout"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/attack" />

                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/decay" />

                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sustain" />

                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/release" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.sdsmdg.harjot.crollerTest.Croller
                    android:id="@+id/attackSlider"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:foregroundGravity="clip_horizontal"
                    app:is_continuous="true"
                    app:label=""
                    app:layout_constraintBottom_toTopOf="@+id/octaveShift"
                    app:layout_constraintEnd_toStartOf="@+id/controls"
                    app:layout_constraintStart_toStartOf="parent"
                    app:progress_primary_stroke_width="10" />

                <com.sdsmdg.harjot.crollerTest.Croller
                    android:id="@+id/decaySlider"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:foregroundGravity="clip_horizontal"
                    app:is_continuous="true"
                    app:label=""
                    app:layout_constraintBottom_toTopOf="@+id/octaveShift"
                    app:layout_constraintEnd_toStartOf="@+id/controls"
                    app:layout_constraintStart_toStartOf="parent"
                    app:progress_primary_stroke_width="10" />

                <com.sdsmdg.harjot.crollerTest.Croller
                    android:id="@+id/sustainSlider"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:foregroundGravity="clip_horizontal"
                    app:is_continuous="true"
                    app:label=""
                    app:layout_constraintBottom_toTopOf="@+id/octaveShift"
                    app:layout_constraintEnd_toStartOf="@+id/controls"
                    app:layout_constraintStart_toStartOf="parent"
                    app:progress_primary_stroke_width="10" />

                <com.sdsmdg.harjot.crollerTest.Croller
                    android:id="@+id/releaseSlider"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:foregroundGravity="clip_horizontal"
                    app:is_continuous="true"
                    app:label=""
                    app:layout_constraintBottom_toTopOf="@+id/octaveShift"
                    app:layout_constraintEnd_toStartOf="@+id/controls"
                    app:layout_constraintStart_toStartOf="parent"
                    app:progress_primary_stroke_width="10" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.sdsmdg.harjot.crollerTest.Croller
                    android:id="@+id/attackFormSlider"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:foregroundGravity="clip_horizontal"
                    app:is_continuous="true"
                    app:label=""
                    app:layout_constraintBottom_toTopOf="@+id/octaveShift"
                    app:layout_constraintEnd_toStartOf="@+id/controls"
                    app:layout_constraintStart_toStartOf="parent"
                    app:progress_primary_stroke_width="10" />

                <com.sdsmdg.harjot.crollerTest.Croller
                    android:id="@+id/decayFormSlider"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:foregroundGravity="clip_horizontal"
                    app:is_continuous="true"
                    app:label=""
                    app:layout_constraintBottom_toTopOf="@+id/octaveShift"
                    app:layout_constraintEnd_toStartOf="@+id/controls"
                    app:layout_constraintStart_toStartOf="parent"
                    app:progress_primary_stroke_width="10" />

                <Space android:layout_weight="1" />

                <com.sdsmdg.harjot.crollerTest.Croller
                    android:id="@+id/releaseFormSlider"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:foregroundGravity="clip_horizontal"
                    app:is_continuous="true"
                    app:label=""
                    app:layout_constraintBottom_toTopOf="@+id/octaveShift"
                    app:layout_constraintEnd_toStartOf="@+id/controls"
                    app:layout_constraintStart_toStartOf="parent"
                    app:progress_primary_stroke_width="10" />
            </TableRow>
        </TableLayout>

        <com.example.midicryboard.trackactivity.NumberPicker
            android:id="@+id/oscillatorsNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/tableLayout"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout"
            app:labelText="@string/oscillators"
            app:min="1"
            app:max="6"
            app:value="1"/>

        <HorizontalScrollView
            android:id="@+id/oscillatorsScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:requiresFadingEdge="horizontal"
            android:fadingEdgeLength="100dp"
            android:overScrollMode="never"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/oscillatorsNumber"
            app:layout_constraintTop_toBottomOf="@+id/oscillatorsNumber"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/oscillators"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:requiresFadingEdge="vertical"
                android:fadingEdgeLength="40dp"
                tools:itemCount="3"
                tools:listitem="@layout/oscillator"/>

        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>